--- a/client/src/components/seriecard/serieCard.module.css
+++ b/client/src/components/seriecard/serieCard.module.css
@@ -1,11 +1,53 @@
 .picture {
   width: 15em;
-}
-
-.synopsis {
-  color: white;
+  height: 28em;
+  object-fit: cover;
 }
 
 .titleH2 {
+  /* biome-ignore lint/a11y/useGenericFontNames: <explanation> */
+  font-family: "josefin-sans";
+  font-weight: lighter;
   color: white;
+  font-size: 1.6em;
+}
+
+.synopsis {
+  position: absolute;
+  top: 0; /* Positionnement vertical (ajuste en pourcentage ou en pixels) */
+  left: 0; /* Positionnement horizontal (ajuste en pourcentage ou en pixels) */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(0, 0, 0);
+  background-color: var(--color-yellow);
+  font-size: 1.2rem;
+  text-align: center;
+  display: none;
+  /* biome-ignore lint/a11y/useGenericFontNames: <explanation> */
+  font-family: "josefin-sans";
+}
+
+.container:hover .synopsis {
+  display: block;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.container {
+  position: relative;
+  display: inline-block;
+  width: 15em;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
