--- a/client/src/pages/registerPage/registerPage.module.css
+++ b/client/src/pages/registerPage/registerPage.module.css
@@ -2,14 +2,34 @@
   color: var(--color-yellow);
   /* biome-ignore lint/a11y/useGenericFontNames: <explanation> */
   font-family: "paytone-one";
-  font-size: 3em;
-  margin: 0.6em;
+  font-size: 1.7em;
+  padding: 1em;
+  background-color: #0d0d0d;
 }
 
 .container {
   background-color: #0d0d0d;
+  position: relative;
+}
+
+.image {
+  position: relative;
+  width: 100%;
 }
 
 .banner {
   opacity: 0.5;
+  width: 100%;
+  height: auto;
+}
+
+.register {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
