--- a/client/src/components/seriecard/serieCard.module.css
+++ b/client/src/components/seriecard/serieCard.module.css
@@ -9,25 +9,28 @@
   font-family: "josefin-sans";
   font-weight: lighter;
   color: white;
-  font-size: 1.6em;
+  font-size: 1.5em;
+  margin: auto;
 }
 
 .synopsis {
   position: absolute;
-  top: 0; /* Positionnement vertical (ajuste en pourcentage ou en pixels) */
-  left: 0; /* Positionnement horizontal (ajuste en pourcentage ou en pixels) */
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: rgb(0, 0, 0);
-  background-color: var(--color-yellow);
-  font-size: 1.2rem;
-  text-align: center;
+  background-color: rgb(255, 236, 61);
+  font-size: 1.1em;
+  text-align: left;
   display: none;
+  align-content: center;
+  padding: 0.40em;
   /* biome-ignore lint/a11y/useGenericFontNames: <explanation> */
-  font-family: "josefin-sans";
+  font-family: "raleway-regular";
 }
 
 .container:hover .synopsis {
@@ -37,7 +40,7 @@
 .section {
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 1.4em;
 }
 
 .container {
@@ -50,4 +53,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.link {
+  text-decoration: none;
 }
