--- a/client/src/pages/seriesPage/seriesPage.module.css
+++ b/client/src/pages/seriesPage/seriesPage.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   gap: 2.5em;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
